# oto-sequencer

./: CMakeLists.txt  README.md
fb_version/: CMakeLists.txt  todo.txt
fb_version/src/: CSVReader.cpp  DrumMachineAudio.cpp  DrumMachineUI.cpp  DrumMachineUI.cpp~  DrumMachineUI.h  MidiUtils.h  SamplePlayer.h  Sequencer.cpp  Sequencer.h  SequencerUI.cpp  SequencerUI.cpp~  SequencerUI.h  SequencerUI.h~  SequencerUtils.h  Test.cpp  a.out
lib/: baseModel.h  modelSet.h  rapidStream.h
lib/ml/: README.md  jsoncpp.cpp  knnClassification.h  modelSet.cpp  neuralNetwork.h  svmClassification.h
pi_drum_machine/: CMakeLists.txt
pi_drum_machine/src/: CSVReader.h  DrumMachineAudio.cpp  DrumMachineAudio.h  DrumMachineUI.cpp  DrumMachineUI.h  FrameBuffer.h  IOUtils.h  MidiUtils.cpp  PluginWindow.cpp  PluginWindow.h  SamplePlayer.cpp  SequencerUI.cpp  SequencerUI.h  SequencerUtils.cpp
src/: ChordUtils.cpp  ChordUtils.h  EventQueue.h  GroveUtils.h  IOUtils.h  KeyUtils.h  Main.cpp  MainPi.cpp  MainRaw.cpp  MidiUtils.cpp  MidiUtils.h  RapidLibUtils.h  RtMidiUtils.h  Sequencer.cpp  Sequencer.h  SequencerUtils.cpp  SequencerUtils.h  SimpleClock.h  unit_tests.cpp
wio-serial-str-display/: wio-serial-str-display.ino
wio-serial-str-display-reset/: README.md  click_to_shell_cmd.py  serial_io.py  wio-serial-str-display-reset.ino
